<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/linearLayout_admob1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffeeeeee"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_menu1"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/beach_icon"
            android:drawablePadding="4.0sp"
            android:gravity="center_vertical"
            android:padding="4.0sp"
            android:text="@string/item202"
            android:textColor="#ffffffff"
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1.0px"
        android:background="#ffffffff" />

    <ScrollView
        android:id="@id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:background="#ffeeeeee"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@id/rimenu1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg2"
                android:drawableLeft="@drawable/left_icon"
                android:drawablePadding="8.0sp"
                android:gravity="center_vertical"
                android:paddingBottom="10.0sp"
                android:paddingLeft="8.0sp"
                android:paddingTop="10.0sp"
                android:text="@string/item209"
                android:textColor="#ff222222"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0dip"
                android:background="#ffff0000" />

            <TextView
                android:id="@id/rimenu2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg2"
                android:drawableLeft="@drawable/left_icon"
                android:drawablePadding="8.0sp"
                android:gravity="center_vertical"
                android:paddingBottom="10.0sp"
                android:paddingLeft="8.0sp"
                android:paddingTop="10.0sp"
                android:text="@string/item210"
                android:textColor="#ff222222"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0dip"
                android:background="#ffff0000" />

            <TextView
                android:id="@id/rimenu3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg2"
                android:drawableLeft="@drawable/left_icon"
                android:drawablePadding="8.0sp"
                android:gravity="center_vertical"
                android:paddingBottom="10.0sp"
                android:paddingLeft="8.0sp"
                android:paddingTop="10.0sp"
                android:text="@string/item211"
                android:textColor="#ff222222"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0dip"
                android:background="#ffff0000" />

           

           

            <TextView
                android:id="@id/rimenu6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg2"
                android:drawableLeft="@drawable/left_icon"
                android:drawablePadding="8.0sp"
                android:gravity="center_vertical"
                android:paddingBottom="10.0sp"
                android:paddingLeft="8.0sp"
                android:paddingTop="10.0sp"
                android:text="@string/item214"
                android:textColor="#ff222222"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0dip"
                android:background="#ffff0000" />

            <TextView
                android:id="@id/rimenu7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg2"
                android:drawableLeft="@drawable/left_icon"
                android:drawablePadding="8.0sp"
                android:gravity="center_vertical"
                android:paddingBottom="10.0sp"
                android:paddingLeft="8.0sp"
                android:paddingTop="10.0sp"
                android:text="@string/item215"
                android:textColor="#ff222222"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0dip"
                android:background="#ffff0000" />

            <TextView
                android:id="@id/rimenu8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg2"
                android:drawableLeft="@drawable/left_icon"
                android:drawablePadding="8.0sp"
                android:gravity="center_vertical"
                android:paddingBottom="10.0sp"
                android:paddingLeft="8.0sp"
                android:paddingTop="10.0sp"
                android:text="@string/item216"
                android:textColor="#ff222222"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0dip"
                android:background="#ffff0000" />

            <TextView
                android:id="@id/rimenu9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg2"
                android:drawableLeft="@drawable/left_icon"
                android:drawablePadding="8.0sp"
                android:gravity="center_vertical"
                android:paddingBottom="10.0sp"
                android:paddingLeft="8.0sp"
                android:paddingTop="10.0sp"
                android:text="@string/item217"
                android:textColor="#ff222222"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0dip"
                android:background="#ffff0000" />

            <TextView
                android:id="@id/rimenu10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg2"
                android:drawableLeft="@drawable/left_icon"
                android:drawablePadding="8.0sp"
                android:gravity="center_vertical"
                android:paddingBottom="10.0sp"
                android:paddingLeft="8.0sp"
                android:paddingTop="10.0sp"
                android:text="@string/item218"
                android:textColor="#ff222222"
                android:textSize="20.0sp"
                android:textStyle="bold" />

      

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0dip"
                android:background="#ffff0000" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>